crates/swc_ecma_parser/tests/flow-hermes/corpus/invalid_syntax/migrated_0018.js
export type * as blah from "foo"
